SDKs/twilio.com/twilio_numbers_v2/1.37.4/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()
    
    req := operations.CreateBundleRequest{
        Security: operations.CreateBundleSecurity{
            AccountSidAuthToken: shared.SchemeAccountSidAuthToken{
                Password: "YOUR_PASSWORD_HERE",
                Username: "YOUR_USERNAME_HERE",
            },
        },
        Request: &operations.CreateBundleCreateBundleRequest{
            Email: "sed",
            EndUserType: "individual",
            FriendlyName: "maiores",
            IsoCountry: "asperiores",
            NumberType: "doloremque",
            RegulationSid: "unde",
            StatusCallback: "ducimus",
        },
    }
    
    res, err := s.CreateBundle(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.NumbersV2RegulatoryComplianceBundle != nil {
        // handle response
    }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `CreateBundle` - Create a new Bundle.
* `CreateBundleCopy` - Creates a new copy of a Bundle. It will internally create copies of all the bundle items (identities and documents) of the original bundle
* `CreateEndUser` - Create a new End User.
* `CreateEvaluation` - Creates an evaluation for a bundle
* `CreateItemAssignment` - Create a new Assigned Item.
* `CreateReplaceItems` - Replaces all bundle items in the target bundle (specified in the path) with all the bundle items of the source bundle (specified by the from_bundle_sid body param)
* `CreateSupportingDocument` - Create a new Supporting Document.
* `DeleteBundle` - Delete a specific Bundle.
* `DeleteEndUser` - Delete a specific End User.
* `DeleteItemAssignment` - Remove an Assignment Item Instance.
* `DeleteSupportingDocument` - Delete a specific Supporting Document.
* `FetchBundle` - Fetch a specific Bundle instance.
* `FetchEndUser` - Fetch specific End User Instance.
* `FetchEndUserType` - Fetch a specific End-User Type Instance.
* `FetchEvaluation` - Fetch specific Evaluation Instance.
* `FetchItemAssignment` - Fetch specific Assigned Item Instance.
* `FetchRegulation` - Fetch specific Regulation Instance.
* `FetchSupportingDocument` - Fetch specific Supporting Document Instance.
* `FetchSupportingDocumentType` - Fetch a specific Supporting Document Type Instance.
* `ListBundle` - Retrieve a list of all Bundles for an account.
* `ListBundleCopy` - Retrieve a list of all Bundles Copies for a Bundle.
* `ListEndUser` - Retrieve a list of all End User for an account.
* `ListEndUserType` - Retrieve a list of all End-User Types.
* `ListEvaluation` - Retrieve a list of Evaluations associated to the Bundle resource.
* `ListItemAssignment` - Retrieve a list of all Assigned Items for an account.
* `ListRegulation` - Retrieve a list of all Regulations.
* `ListSupportingDocument` - Retrieve a list of all Supporting Document for an account.
* `ListSupportingDocumentType` - Retrieve a list of all Supporting Document Types.
* `UpdateBundle` - Updates a Bundle in an account.
* `UpdateEndUser` - Update an existing End User.
* `UpdateSupportingDocument` - Update an existing Supporting Document.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
